fix: overflow

--- a/src/main/resources/static/frontend/index.css
+++ b/src/main/resources/static/frontend/index.css
@@ -233,7 +233,7 @@ section{
     width: 100vw;
     position: relative;
     display: flex;
-    overflow-x: scroll;
+    overflow-x: hidden;
     justify-content: center;
     align-items: center;
 }
